# eso-addons-updater

./: .gitignore  README.md  config.example.json  default_data_file.json  eso_addon_updater.py  plugins.json  pyproject.toml
.github/: copilot-instructions.md
