[tool.poetry]
name = "eso-addon-updater"
version = "0.1.0"
description = ""
authors = ["Alban Dusaussoy <adusaussoy@synthesio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
main = "eso_addon_updater:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240311"
types-beautifulsoup4 = "^4.12.0.20240229"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
ignore = []

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
